fix overflow scroll

--- a/style.css
+++ b/style.css
@@ -35,9 +35,10 @@ body {
 
 #container {
     position: relative;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 
@@ -250,8 +251,7 @@ body {
         left: 90%;
     }
 }
-   
-}
+
 
 .landing-page-title {
     display: block;
